--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,6 @@
   <!-- Title and other stuffs -->
   <title><%= full_title(yield(:title)) %></title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
-  <meta name="keywords" content="">
-  <meta name="author" content="">
   <%= csrf_meta_tags %>
 
 
@@ -50,159 +47,7 @@
 
 <body>
 
-<div class="navbar navbar-fixed-top navbar-inverse">
-  <div class="navbar-inner">
-    <div class="container">
-      <!-- Menu button for smallar screens -->
-      <a class="btn btn-navbar mobile-btn-bar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-      </a>
-      <!-- Site name for smallar screens -->
-      <a href="index.html" class="brand">
-        <img src="img/logo.png" alt="Playmotrade - Playmobil Marketplace"/>
-      </a>
-
-      <!-- Navigation starts -->
-      <div class="nav-collapse collapse">        
-
-
-
-        <!-- Links -->
-        <ul class="nav pull-right">
-          <li class="dropdown pull-right">            
-            <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-              <img src="img/user.jpg" alt="" class="nav-user-pic" /> Admin <b class="caret"></b>              
-            </a>
-            
-            <!-- Dropdown menu -->
-            <ul class="dropdown-menu">
-              <li><a href="#"><i class="icon-user"></i> Profile</a></li>
-              <li><a href="#"><i class="icon-cogs"></i> Settings</a></li>
-              <li><a href="login.html"><i class="icon-off"></i> Logout</a></li>
-            </ul>
-          </li>
-          
-        </ul>
-
-        <!-- Notifications -->
-        <ul class="nav pull-right">
-          
-          <!-- Comment button with number of latest comments count -->
-            <li class="dropdown dropdown-big">
-              <a class="dropdown-toggle" href="#" data-toggle="dropdown">
-                <i class="icon-comments"></i> Catalog <span   class="badge badge-info">6</span> 
-              </a>
-
-                <ul class="dropdown-menu">
-                  <li>
-                    <!-- Heading - h5 -->
-                    <h5><i class="icon-comments"></i> Chats</h5>
-                    <!-- Use hr tag to add border -->
-                    <hr />
-                  </li>
-                  <li>
-                    <!-- List item heading h6 -->
-                    <a href="#">Hi :)</a> <span class="label label-warning pull-right">10:42</span>
-                    <div class="clearfix"></div>
-                    <hr />
-                  </li>
-                  <li>
-                    <a href="#">How are you?</a> <span class="label label-warning pull-right">20:42</span>
-                    <div class="clearfix"></div>
-                    <hr />
-                  </li>
-                  <li>
-                    <a href="#">What are you doing?</a> <span class="label label-warning pull-right">14:42</span>
-                    <div class="clearfix"></div>
-                    <hr />
-                  </li>                  
-                  <li>
-                    <div class="drop-foot">
-                      <a href="#">View All</a>
-                    </div>
-                  </li>                                    
-                </ul>
-            </li>
-
-            <!-- Message button with number of latest messages count-->
-            <li class="dropdown dropdown-big">
-              <a class="dropdown-toggle" href="#" data-toggle="dropdown">
-                <i class="icon-envelope-alt"></i> Inbox <span class="badge badge-important">6</span> 
-              </a>
-
-                <ul class="dropdown-menu">
-                  <li>
-                    <!-- Heading - h5 -->
-                    <h5><i class="icon-envelope-alt"></i> Messages</h5>
-                    <!-- Use hr tag to add border -->
-                    <hr />
-                  </li>
-                  <li>
-                    <!-- List item heading h6 -->
-                    <a href="#">Hello how are you?</a>
-                    <!-- List item para -->
-                    <p>Quisque eu consectetur erat eget  semper...</p>
-                    <hr />
-                  </li>
-                  <li>
-                    <a href="#">Today is wonderful?</a>
-                    <p>Quisque eu consectetur erat eget  semper...</p>
-                    <hr />
-                  </li>
-                  <li>
-                    <div class="drop-foot">
-                      <a href="#">View All</a>
-                    </div>
-                  </li>                                    
-                </ul>
-            </li>
-
-            <!-- Members button with number of latest members count -->
-            <li class="dropdown dropdown-big">
-              <a class="dropdown-toggle" href="#" data-toggle="dropdown">
-                <i class="icon-user"></i> Users <span   class="badge badge-success">6</span> 
-              </a>
-
-                <ul class="dropdown-menu">
-                  <li>
-                    <!-- Heading - h5 -->
-                    <h5><i class="icon-user"></i> Users</h5>
-                    <!-- Use hr tag to add border -->
-                    <hr />
-                  </li>
-                  <li>
-                    <!-- List item heading h6-->
-                    <a href="#">Ravi Kumar</a> <span class="label label-warning pull-right">Free</span>
-                    <div class="clearfix"></div>
-                    <hr />
-                  </li>
-                  <li>
-                    <a href="#">Balaji</a> <span class="label label-important pull-right">Premium</span>
-                    <div class="clearfix"></div>
-                    <hr />
-                  </li>
-                  <li>
-                    <a href="#">Kumarasamy</a> <span class="label label-warning pull-right">Free</span>
-                    <div class="clearfix"></div>
-                    <hr />
-                  </li>                  
-                  <li>
-                    <div class="drop-foot">
-                      <a href="#">View All</a>
-                    </div>
-                  </li>                                    
-                </ul>
-            </li> 
-
-        </ul>
-
-      </div>
-
-    </div>
-  </div>
-</div>
+<%= render "shared/main_menu" %>
 
 
 <!-- Main content starts -->
