--- a/app/views/shared/_main_menu.html.erb
+++ b/app/views/shared/_main_menu.html.erb
@@ -40,13 +40,13 @@
           <!-- Comment button with number of latest comments count -->
             <li class="dropdown dropdown-big">
               <a class="dropdown-toggle" href="#" data-toggle="dropdown">
-                <i class="icon-hdd"></i> Catalog
+                <i class="icon-archive"></i> Catalog <span class="badge badge-success">6</span>
               </a>
 
                 <ul class="dropdown-menu">
                   <li>
                     <!-- Heading - h5 -->
-                    <h5><i class="icon-comments"></i> Chats</h5>
+                    <h5><i class="icon-plus-sign"></i> Recently Added</h5>
                     <!-- Use hr tag to add border -->
                     <hr />
                   </li>
@@ -77,7 +77,7 @@
             <!-- Message button with number of latest messages count-->
             <li class="dropdown dropdown-big">
               <a class="dropdown-toggle" href="#" data-toggle="dropdown">
-                <i class="icon-envelope-alt"></i> Inbox <span class="badge badge-important">6</span> 
+                <i class="icon-download-alt"></i> Buy 
               </a>
 
                 <ul class="dropdown-menu">
@@ -110,7 +110,44 @@
             <!-- Members button with number of latest members count -->
             <li class="dropdown dropdown-big">
               <a class="dropdown-toggle" href="#" data-toggle="dropdown">
-                <i class="icon-user"></i> Users <span   class="badge badge-success">6</span> 
+                <i class="icon-upload-alt"></i> Sell 
+              </a>
+
+                <ul class="dropdown-menu">
+                  <li>
+                    <!-- Heading - h5 -->
+                    <h5><i class="icon-user"></i> Users</h5>
+                    <!-- Use hr tag to add border -->
+                    <hr />
+                  </li>
+                  <li>
+                    <!-- List item heading h6-->
+                    <a href="#">Ravi Kumar</a> <span class="label label-warning pull-right">Free</span>
+                    <div class="clearfix"></div>
+                    <hr />
+                  </li>
+                  <li>
+                    <a href="#">Balaji</a> <span class="label label-important pull-right">Premium</span>
+                    <div class="clearfix"></div>
+                    <hr />
+                  </li>
+                  <li>
+                    <a href="#">Kumarasamy</a> <span class="label label-warning pull-right">Free</span>
+                    <div class="clearfix"></div>
+                    <hr />
+                  </li>                  
+                  <li>
+                    <div class="drop-foot">
+                      <a href="#">View All</a>
+                    </div>
+                  </li>                                    
+                </ul>
+            </li> 
+
+              <!-- Members button with number of latest members count -->
+            <li class="dropdown dropdown-big">
+              <a class="dropdown-toggle" href="#" data-toggle="dropdown">
+                <i class="icon-user"></i> Trade 
               </a>
 
                 <ul class="dropdown-menu">
