more menu style

--- a/app/views/shared/_main_menu.html.erb
+++ b/app/views/shared/_main_menu.html.erb
@@ -8,7 +8,7 @@
             <span class="icon-bar"></span>
       </a>
       <!-- Site name for smallar screens -->
-      <a href="index.html" class="brand">
+      <a href="/" class="brand">
         <img src="img/logo.png" alt="Playmotrade - Unofficial Playmobil Marketplace"/>
       </a>
 
@@ -147,7 +147,7 @@
               <!-- Members button with number of latest members count -->
             <li class="dropdown dropdown-big">
               <a class="dropdown-toggle" href="#" data-toggle="dropdown">
-                <i class="icon-user"></i> Trade 
+                <i class="icon-gift"></i> Trade 
               </a>
 
                 <ul class="dropdown-menu">
