--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -133,10 +133,12 @@
                             <!-- Buttons -->
                             <div class="form-actions">
                                <!-- Buttons -->
+                               <%= f.submit :class => "btn btn-success" %>
                               <button type="submit" class="btn btn-success">Update</button>
                               <button type="reset" class="btn">Reset</button>
                             </div>
-                        </form>
+                          
+                          <% end %>
                       </div>
 
                   </div>
