--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -62,7 +62,7 @@
                             <div class="control-group">
                               <label class="control-label" for="name1">First Name</label>
                               <div class="controls">
-                                <%= f.text_field :first_name, :class => "input-large" %>
+                                <%= f.text_field :first_name %>
                               </div>
                             </div>   
                             <!-- Email -->
@@ -133,7 +133,7 @@
                             <!-- Buttons -->
                             <div class="form-actions">
                                <!-- Buttons -->
-                               <%= f.submit :class => "btn btn-success" %>
+                               <%= f.submit %>
                               <button type="submit" class="btn btn-success">Update</button>
                               <button type="reset" class="btn">Reset</button>
                             </div>
