--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -56,13 +56,13 @@
                    
                       <div class="form profile">
                         <!-- Edit profile form (not working)-->
-                        <%= form_for @user do |f| %>
                         
+                        <form class="form-horizontal">
                             <!-- Name -->
                             <div class="control-group">
                               <label class="control-label" for="name1">First Name</label>
                               <div class="controls">
-                                <%= f.text_field :first_name %>
+                                
                               </div>
                             </div>   
                             <!-- Email -->
@@ -133,12 +133,12 @@
                             <!-- Buttons -->
                             <div class="form-actions">
                                <!-- Buttons -->
-                               <%= f.submit %>
+                               
                               <button type="submit" class="btn btn-success">Update</button>
                               <button type="reset" class="btn">Reset</button>
                             </div>
                           
-                          <% end %>
+                          </form>
                       </div>
 
                   </div>
