--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,35 +10,35 @@
 
 
   <!-- Stylesheets -->
-  <link href="style/bootstrap.css" rel="stylesheet">
+  <link href="/style/bootstrap.css" rel="stylesheet">
   <!-- Font awesome icon -->
-  <link rel="stylesheet" href="style/font-awesome.css"> 
+  <link rel="stylesheet" href="/style/font-awesome.css"> 
   <!-- jQuery UI -->
-  <link rel="stylesheet" href="style/jquery-ui.css"> 
+  <link rel="stylesheet" href="/style/jquery-ui.css"> 
   <!-- Calendar -->
-  <link rel="stylesheet" href="style/fullcalendar.css">
+  <link rel="stylesheet" href="/style/fullcalendar.css">
   <!-- prettyPhoto -->
-  <link rel="stylesheet" href="style/prettyPhoto.css">   
+  <link rel="stylesheet" href="/style/prettyPhoto.css">   
   <!-- Star rating -->
-  <link rel="stylesheet" href="style/rateit.css">
+  <link rel="stylesheet" href="/style/rateit.css">
   <!-- Date picker -->
-  <link rel="stylesheet" href="style/bootstrap-datetimepicker.min.css">
+  <link rel="stylesheet" href="/style/bootstrap-datetimepicker.min.css">
   <!-- jQuery Gritter -->
-  <link rel="stylesheet" href="style/jquery.gritter.css">
+  <link rel="stylesheet" href="/style/jquery.gritter.css">
   <!-- CLEditor -->
-  <link rel="stylesheet" href="style/jquery.cleditor.css"> 
+  <link rel="stylesheet" href="/style/jquery.cleditor.css"> 
   <!-- Bootstrap toggle -->
-  <link rel="stylesheet" href="style/bootstrap-toggle-buttons.css">
+  <link rel="stylesheet" href="/style/bootstrap-toggle-buttons.css">
   <!-- Main stylesheet -->
-  <link href="style/style.css" rel="stylesheet">
+  <link href="/style/style.css" rel="stylesheet">
   <!-- Widgets stylesheet -->
-  <link href="style/widgets.css" rel="stylesheet">   
+  <link href="/style/widgets.css" rel="stylesheet">   
   <!-- Responsive style (from Bootstrap) -->
-  <link href="style/bootstrap-responsive.css" rel="stylesheet">
+  <link href="/style/bootstrap-responsive.css" rel="stylesheet">
   
   <!-- HTML5 Support for IE -->
   <!--[if lt IE 9]>
-  <script src="js/html5shim.js"></script>
+  <script src="/js/html5shim.js"></script>
   <![endif]-->
 
   <!-- Favicon -->
@@ -57,28 +57,28 @@
 <!-- Scroll to top -->
 <span class="totop"><a href="#"><i class="icon-chevron-up"></i></a></span> 
 <!-- JS -->
-<script src="js/jquery.js"></script> <!-- jQuery -->
-<script src="js/bootstrap.js"></script> <!-- Bootstrap -->
-<script src="js/jquery-ui-1.10.2.custom.min.js"></script> <!-- jQuery UI -->
-<script src="js/fullcalendar.min.js"></script> <!-- Full Google Calendar - Calendar -->
-<script src="js/jquery.rateit.min.js"></script> <!-- RateIt - Star rating -->
-<script src="js/jquery.prettyPhoto.js"></script> <!-- prettyPhoto -->
+<script src="/js/jquery.js"></script> <!-- jQuery -->
+<script src="/js/bootstrap.js"></script> <!-- Bootstrap -->
+<script src="/js/jquery-ui-1.10.2.custom.min.js"></script> <!-- jQuery UI -->
+<script src="/js/fullcalendar.min.js"></script> <!-- Full Google Calendar - Calendar -->
+<script src="/js/jquery.rateit.min.js"></script> <!-- RateIt - Star rating -->
+<script src="/js/jquery.prettyPhoto.js"></script> <!-- prettyPhoto -->
 
 <!-- jQuery Flot -->
-<script src="js/excanvas.min.js"></script>
-<script src="js/jquery.flot.js"></script>
-<script src="js/jquery.flot.resize.js"></script>
-<script src="js/jquery.flot.pie.js"></script>
-<script src="js/jquery.flot.stack.js"></script>
+<script src="/js/excanvas.min.js"></script>
+<script src="/js/jquery.flot.js"></script>
+<script src="/js/jquery.flot.resize.js"></script>
+<script src="/js/jquery.flot.pie.js"></script>
+<script src="/js/jquery.flot.stack.js"></script>
 
-<script src="js/jquery.gritter.min.js"></script> <!-- jQuery Gritter -->
-<script src="js/sparklines.js"></script> <!-- Sparklines -->
-<script src="js/jquery.cleditor.min.js"></script> <!-- CLEditor -->
-<script src="js/bootstrap-datetimepicker.min.js"></script> <!-- Date picker -->
-<script src="js/jquery.toggle.buttons.js"></script> <!-- Bootstrap Toggle -->
-<script src="js/filter.js"></script> <!-- Filter for support page -->
-<script src="js/custom.js"></script> <!-- Custom codes -->
-<script src="js/charts.js"></script> <!-- Custom chart codes -->
+<script src="/js/jquery.gritter.min.js"></script> <!-- jQuery Gritter -->
+<script src="/js/sparklines.js"></script> <!-- Sparklines -->
+<script src="/js/jquery.cleditor.min.js"></script> <!-- CLEditor -->
+<script src="/js/bootstrap-datetimepicker.min.js"></script> <!-- Date picker -->
+<script src="/js/jquery.toggle.buttons.js"></script> <!-- Bootstrap Toggle -->
+<script src="/js/filter.js"></script> <!-- Filter for support page -->
+<script src="/js/custom.js"></script> <!-- Custom codes -->
+<script src="/js/charts.js"></script> <!-- Custom chart codes -->
 
 </body>
 </html>
