--- a/app/views/shared/_main_menu.html.erb
+++ b/app/views/shared/_main_menu.html.erb
@@ -9,7 +9,7 @@
       </a>
       <!-- Site name for smallar screens -->
       <a href="/" class="brand">
-        <img src="img/logo.png" alt="Playmotrade - Unofficial Playmobil Marketplace"/>
+        <img src="/img/logo.png" alt="Playmotrade - Unofficial Playmobil Marketplace"/>
       </a>
 
       <!-- Navigation starts -->
