fix submit button

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -159,7 +159,7 @@
                             <!-- Buttons -->
                             <div class="form-actions">
                                <!-- Buttons -->
-                               <%= f.submit, :as => :button, :html => {:class => "btn btn-success"} %>
+                               <%= f.submit "Register", class: "btn btn-success" %>
                               <button type="reset" class="btn">Reset</button>
                             </div>
                           
