--- a/app/views/shared/_main_menu.html.erb
+++ b/app/views/shared/_main_menu.html.erb
@@ -40,7 +40,7 @@
           <!-- Comment button with number of latest comments count -->
             <li class="dropdown dropdown-big">
               <a class="dropdown-toggle" href="#" data-toggle="dropdown">
-                <i class="icon-archive"></i> Catalog <span class="badge badge-success">6</span>
+                <i class="icon-book"></i> Catalog <span class="badge badge-success">6</span>
               </a>
 
                 <ul class="dropdown-menu">
