--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -126,7 +126,7 @@
 
                             <!-- About -->
                             <div class="control-group">
-                              <label class="control-label" for="user[about]">Zip</label>
+                              <label class="control-label" for="user[about]">About</label>
                               <div class="controls">
                                 <%= f.text_area :about, :html => {:class => "input-large"} %>
                               </div>
