--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,17 +1,15 @@
-<% provide(:title, "Register") %>
+<% provide(:title, "Update Profile") %>
 <div class="content">
   <!-- Sidebar -->
   <%= render "shared/sidebar" %>
   <!-- Sidebar ends -->
-  	<!-- Main bar -->
-  	<div class="mainbar">
+    <!-- Main bar -->
+    <div class="mainbar">
       
-	    <!-- Page heading -->
-	    <div class="page-head">
+      <!-- Page heading -->
+      <div class="page-head">
         <!-- Page heading -->
-	      <h2 class="pull-left">Register
-          <!-- page meta -->
-          <span class="page-meta">Creating an account on Playmotrade is free and easy. Simply fill out the information below. You will recieve a confirmation by email.</span>
+        <h2 class="pull-left">Update Profile
         </h2>
 
 
@@ -20,19 +18,19 @@
           <a href="/"><i class="icon-home"></i> Home</a> 
           <!-- Divider -->
           <span class="divider">/</span> 
-          <a href="/users/new" class="bread-current">Register</a>
+          <a href="/users/edit" class="bread-current">Update Profile</a>
         </div>
 
         <div class="clearfix"></div>
 
-	    </div>
-	    <!-- Page heading ends -->
+      </div>
+      <!-- Page heading ends -->
 
 
 
-	    <!-- Matter -->
+      <!-- Matter -->
 
-	    <div class="matter">
+      <div class="matter">
         <div class="container-fluid">
 
           <div class="row-fluid">
@@ -41,7 +39,7 @@
 
               <div class="widget wred">
                 <div class="widget-head">
-                  <div class="pull-left">Create a Member Profile</div>
+                  <div class="pull-left">Update Profile</div>
                   <div class="clearfix"></div>
                 </div>
 
@@ -54,19 +52,10 @@
                         <!-- Edit profile form (not working)-->
                         <%= form_for @user, :html => {:class => "form-horizontal"} do |f| %>
                             <%= render partial: "form", locals: {f: f} %>
-                            <!-- Checkbox -->
-                            <div class="control-group">
-                               <div class="controls">
-                                  <label class="checkbox inline">
-                                     <%= f.check_box :agrees_to_tos %> Agree with Terms and Conditions
-                                  </label>
-                               </div>
-                            </div> 
                             <!-- Buttons -->
                             <div class="form-actions">
                                <!-- Buttons -->
-                               <%= f.submit "Register", class: "btn btn-success" %>
-                              <button type="reset" class="btn">Reset</button>
+                               <%= f.submit "Update", class: "btn btn-success" %>
                             </div>
                           
                           <% end %>
@@ -81,13 +70,13 @@
           </div>
 
         </div>
-		  </div>
+      </div>
 
-		<!-- Matter ends -->
+    <!-- Matter ends -->
 
     </div>
 
-   <!-- Mainbar ends -->	    	
+   <!-- Mainbar ends -->        
    <div class="clearfix"></div>
 
 </div>
