--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -33,6 +33,8 @@
 	    <!-- Matter -->
 
 	    <div class="matter">
+
+        <%= render "shared/flash" %>
         <div class="container-fluid">
 
           <div class="row-fluid">
