--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -55,7 +55,7 @@
                    
                       <div class="form profile">
                         <!-- Edit profile form (not working)-->
-                        <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)), :html => {:class => "form-horizontal"} do |f| %>
+                        <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:class => "form-horizontal"}) do |f| %>
                             <%= render partial: "form", locals: {f: f} %>
                             <!-- Checkbox -->
                             <div class="control-group">
