--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -39,7 +39,7 @@
 
             <div class="span12">
               <% if devise_error_messages! %>
-                <div class="alert-message error">
+                <div class="alert alert-error">
                   <a class="close" href="#">×</a>
                   <%= content_tag :p, devise_error_messages! %>
                 </div>
