--- a/app/views/shared/_main_menu.html.erb
+++ b/app/views/shared/_main_menu.html.erb
@@ -28,7 +28,7 @@
             <ul class="dropdown-menu">
               <li><a href="#"><i class="icon-user"></i> Profile</a></li>
               <li><a href="#"><i class="icon-cogs"></i> Settings</a></li>
-              <li><%=link_to destroy_user_session_path do %><i class="icon-off"></i> Logout</a><% end %></li>
+              <li><%=link_to destroy_user_session_path, :method => :delete do %><i class="icon-off"></i> Logout</a><% end %></li>
             </ul>
           </li>
           
