--- a/app/views/shared/_main_menu.html.erb
+++ b/app/views/shared/_main_menu.html.erb
@@ -35,7 +35,7 @@
         </ul>
         <% else %>
         <ul class="nav pull-right">
-          <li><%= link_to(new_user_session_path) do %><a href="#"><i class="icon-user"></i> Login<% end %></li>
+          <li><%= link_to(new_user_session_path) do %><i class="icon-user"></i> Login<% end %></li>
         </ul>
         <% end %>
 
