--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -27,3 +27,104 @@
 <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %></p>
 
 <%= link_to "Back", :back %>
+
+<% provide(:title, "Register") %>
+<div class="content">
+  <!-- Sidebar -->
+  <%= render "shared/sidebar" %>
+  <!-- Sidebar ends -->
+    <!-- Main bar -->
+    <div class="mainbar">
+      
+      <!-- Page heading -->
+      <div class="page-head">
+        <!-- Page heading -->
+        <h2 class="pull-left">Register
+          <!-- page meta -->
+          <span class="page-meta">Creating an account on Playmotrade is free and easy. Simply fill out the information below. You will recieve a confirmation by email.</span>
+        </h2>
+
+
+        <!-- Breadcrumb -->
+        <div class="bread-crumb pull-right">
+          <a href="/"><i class="icon-home"></i> Home</a> 
+          <!-- Divider -->
+          <span class="divider">/</span> 
+          <a href="/users/new" class="bread-current">Register</a>
+        </div>
+
+        <div class="clearfix"></div>
+
+      </div>
+      <!-- Page heading ends -->
+
+
+
+      <!-- Matter -->
+
+      <div class="matter">
+        <div class="container-fluid">
+
+          <div class="row-fluid">
+
+            <div class="span12">
+              <% if devise_error_messages! %>
+                <div class="alert alert-error">
+                  <a class="close" href="#">×</a>
+                  <%= content_tag :p, devise_error_messages! %>
+                </div>
+              <% end %>
+
+              <div class="widget wred">
+                <div class="widget-head">
+                  <div class="pull-left">Create a Member Profile</div>
+                  <div class="clearfix"></div>
+                </div>
+
+                <div class="widget-content">
+                  <div class="padd">
+                    
+                    <!-- Profile form -->
+                   
+                      <div class="form profile">
+                        <!-- Edit profile form (not working)-->
+                        <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:class => "form-horizontal"}) do |f| %>
+                            <%= render partial: "form", locals: {f: f} %>
+                            <!-- Checkbox -->
+                            <div class="control-group">
+                               <div class="controls">
+                                  <label class="checkbox inline">
+                                     <%= f.check_box :agrees_to_tos %> Agree with Terms and Conditions
+                                  </label>
+                               </div>
+                            </div> 
+                            <!-- Buttons -->
+                            <div class="form-actions">
+                               <!-- Buttons -->
+                               <%= f.submit "Register", class: "btn btn-success" %>
+                              <button type="reset" class="btn">Reset</button>
+                            </div>
+                          
+                          <% end %>
+                      </div>
+
+                  </div>
+                </div>
+              </div>  
+              
+            </div>
+
+          </div>
+
+        </div>
+      </div>
+
+    <!-- Matter ends -->
+
+    </div>
+
+   <!-- Mainbar ends -->        
+   <div class="clearfix"></div>
+
+</div>
+<!-- Content ends -->
