--- a/app/views/devise/_form.html.erb
+++ b/app/views/devise/_form.html.erb
@@ -18,6 +18,13 @@
     <%= f.email_field :email, :html => {:class => "input-large"} %>
   </div>
 </div>
+<!-- Avatar -->
+<div class="control-group">
+  <label class="control-label" for="user[avatar]">Avatar</label>
+  <div class="controls">
+    <%= form.file_field :avatar, :html => {:class => "input-large"} %>
+  </div>
+</div>
 <!-- Telephone -->
 <div class="control-group">
   <label class="control-label" for="user[telephone]">Telephone</label>
