--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,7 +9,7 @@
               </div>
               <div class="widget-content">
                 <div class="padd">
-                  <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:class => "form-horizontal"}) do |f| %>
+                  <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:class => "form-horizontal", :multipart => true}) do |f| %>
                       <%= render partial: "form", locals: {f: f} %>
                       <!-- Checkbox -->
                       <div class="control-group">
@@ -37,4 +37,3 @@
     </div>
   </div> 
 </div>
-  
