--- a/app/views/devise/_form.html.erb
+++ b/app/views/devise/_form.html.erb
@@ -22,7 +22,7 @@
 <div class="control-group">
   <label class="control-label" for="user[avatar]">Avatar</label>
   <div class="controls">
-    <%= form.file_field :avatar, :html => {:class => "input-large"} %>
+    <%= f.file_field :avatar, :html => {:class => "input-large"} %>
   </div>
 </div>
 <!-- Telephone -->
