--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,6 +9,7 @@
               </div>
               <div class="widget-content">
                 <div class="padd">
+                  <%= devise_error_messages! %>
                   <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:class => "form-horizontal", :multipart => true}) do |f| %>
                       <%= render partial: "form", locals: {f: f} %>
                       <!-- Checkbox -->
