--- a/app/views/shared/_main_menu.html.erb
+++ b/app/views/shared/_main_menu.html.erb
@@ -22,7 +22,7 @@
         <ul class="nav pull-right">
           <li class="dropdown pull-right">            
             <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-              <img src="img/user.jpg" alt="" class="nav-user-pic" /> <%= current_user.username %> <b class="caret"></b>              
+              <%= image_tag current_user.avatar.url(:medium) %> <%= current_user.username %> <b class="caret"></b>              
             </a>
             
             <!-- Dropdown menu -->
