--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,7 +9,9 @@
               </div>
               <div class="widget-content">
                 <div class="padd">
-                  <%= devise_error_messages! %>
+                  <% if devise_error_messages!.present? %>
+                    <%= devise_error_messages! %>
+                  <% end %>
                   <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:class => "form-horizontal", :multipart => true}) do |f| %>
                       <%= render partial: "form", locals: {f: f} %>
                       <!-- Checkbox -->
@@ -31,7 +33,7 @@
                 </div>
               </div>
                 <div class="widget-foot">
-                  Already Registred? <%= link_to('Login', new_user_session_path)  %> 
+                  Already Registered? <%= link_to('Login', new_user_session_path)  %> 
                 </div>
             </div>  
       </div>
