--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,7 +10,9 @@
               <div class="widget-content">
                 <div class="padd">
                   <% if devise_error_messages!.present? %>
-                    <%= devise_error_messages! %>
+                    <div class="alert alert-error">
+                      <%= devise_error_messages! %>
+                    </div>
                   <% end %>
                   <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:class => "form-horizontal", :multipart => true}) do |f| %>
                       <%= render partial: "form", locals: {f: f} %>
