better errors on forms 2

--- a/app/views/devise/_form.html.erb
+++ b/app/views/devise/_form.html.erb
@@ -2,47 +2,47 @@
 <div class="control-group">
   <label class="control-label" for="user[first_name]">First Name</label>
   <div class="controls">
-    <%= f.text_field :first_name, :html => {:class => "input-large"} %>
+    <%= f.text_field :first_name, :class => "input-large" %>
   </div>
 </div>
 <div class="control-group">
   <label class="control-label" for="user[last_name]">Last Name</label>
   <div class="controls">
-    <%= f.text_field :last_name, :html => {:class => "input-large"} %>
+    <%= f.text_field :last_name, :class => "input-large" %>
   </div>
 </div>   
 <!-- Email -->
 <div class="control-group">
   <label class="control-label" for="user[email]">Email</label>
   <div class="controls">
-    <%= f.email_field :email, :html => {:class => "input-large"} %>
+    <%= f.email_field :email, :class => "input-large" %>
   </div>
 </div>
 <!-- Avatar -->
 <div class="control-group">
   <label class="control-label" for="user[avatar]">Avatar</label>
   <div class="controls">
-    <%= f.file_field :avatar, :html => {:class => "input-large"} %>
+    <%= f.file_field :avatar, :class => "input-large" %>
   </div>
 </div>
 <!-- Telephone -->
 <div class="control-group">
   <label class="control-label" for="user[telephone]">Telephone</label>
   <div class="controls">
-    <%= f.telephone_field :telephone, :html => {:class => "input-large"} %>
+    <%= f.telephone_field :telephone, :class => "input-large" %>
   </div>
 </div>  
 <!-- Address -->
 <div class="control-group">
   <label class="control-label" for="user[address1]">Address 1</label>
   <div class="controls">
-    <%= f.text_field :address1, :html => {:class => "input-large"} %>
+    <%= f.text_field :address1, :class => "input-large" %>
   </div>
 </div>
 <div class="control-group">
   <label class="control-label" for="user[address2]">Address 2</label>
   <div class="controls">
-    <%= f.text_field :address2, :html => {:class => "input-large"} %>
+    <%= f.text_field :address2, :class => "input-large" %>
   </div>
 </div>                           
 <!-- Country -->
@@ -58,21 +58,21 @@
 <div class="control-group">
   <label class="control-label" for="user[state]">State</label>
   <div class="controls">
-    <%= f.text_field :state, :html => {:class => "input-large"} %>
+    <%= f.text_field :state, :class => "input-large" %>
   </div>
 </div>                                               
 <!-- City -->
 <div class="control-group">
   <label class="control-label" for="user[city]">City</label>
   <div class="controls">
-    <%= f.text_field :city, :html => {:class => "input-large"} %>
+    <%= f.text_field :city, :class => "input-large" %>
   </div>
 </div>
 <!-- Zip -->
 <div class="control-group">
   <label class="control-label" for="user[zip]">Zip</label>
   <div class="controls">
-    <%= f.text_field :zip, :html => {:class => "input-large"} %>
+    <%= f.text_field :zip, :class => "input-large" %>
   </div>
 </div>   
 
@@ -80,26 +80,26 @@
 <div class="control-group">
   <label class="control-label" for="user[about]">About</label>
   <div class="controls">
-    <%= f.text_area :about, :html => {:class => "input-large"} %>
+    <%= f.text_area :about, :class => "input-large" %>
   </div>
 </div>                                                                                                                                      
 <!-- Username -->
 <div class="control-group">
   <label class="control-label" for="user[username]">Username</label>
   <div class="controls">
-    <%= f.text_field :username, :html => {:class => "input-large"} %>
+    <%= f.text_field :username, :class => "input-large" %>
   </div>
 </div>
 <!-- Password -->
 <div class="control-group">
   <label class="control-label" for="user[password]">Password</label>
   <div class="controls">
-    <%= f.password_field :password, :html => {:class => "input-large"} %>
+    <%= f.password_field :password, :class => "input-large" %>
   </div>
 </div>
 <div class="control-group">
   <label class="control-label" for="user[password]">Retype Password</label>
   <div class="controls">
-    <%= f.password_field :password_confirmation, :html => {:class => "input-large"} %>
+    <%= f.password_field :password_confirmation, :class => "input-large" %>
   </div>
 </div>
