--- a/public/style/style.css
+++ b/public/style/style.css
@@ -38,9 +38,10 @@
   line-height: 28px;
 }
 
-.field_with_errors .control-label,.field_with_errors .help-block,.field_with_errors .help-inline{color:#b94a48;}
-.field_with_errors.checkbox,.field_with_errors .radio,.field_with_errors input,.field_with_errors select,.field_with_errors textarea{color:#b94a48;}
-.field_with_errorsinput,.field_with_errors select,.field_with_errors textarea{border-color:#b94a48;-webkit-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.075);-moz-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.075);box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.075);}.field_with_errors input:focus,.field_with_errors select:focus,.field_with_errors textarea:focus{border-color:#953b39;-webkit-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.075),0 0 6px #d59392;-moz-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.075),0 0 6px #d59392;box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.075),0 0 6px #d59392;}
+
+.field_with_errors .checkbox,.field_with_errors .radio,.field_with_errors input,.field_with_errors select,.field_with_errors textarea{color:#b94a48;}
+.field_with_errors input,.field_with_errors select,.field_with_errors textarea{border-color:#b94a48;-webkit-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.075);-moz-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.075);box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.075);}
+.field_with_errors input:focus,.field_with_errors select:focus,.field_with_errors textarea:focus{border-color:#953b39;-webkit-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.075),0 0 6px #d59392;-moz-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.075),0 0 6px #d59392;box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.075),0 0 6px #d59392;}
 .field_with_errors .input-prepend .add-on,.field_with_errors .input-append .add-on{color:#b94a48;background-color:#f2dede;border-color:#b94a48;}
 
 form *{
