--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -55,32 +55,23 @@
                       <thead>
                         <tr>
                           <th>#</th>
+                          <th>Username</th>
                           <th>Name</th>
-                          <th>Location</th>
-                          <th>Date</th>
-                          <th>Type</th>
-                          <th>Status</th>
-                          <th>Control</th>
+                          <th>City</th>
+                          <th>Created</th>
                         </tr>
                       </thead>
                       <tbody>
+                        <% @users.each do |user| %>
 
                         <tr>
-                          <td>1</td>
-                          <td>Ravi Kumar</td>
-                          <td>India</td>
-                          <td>23/12/2012</td>
-                          <td>Paid</td>
-                          <td><span class="label label-success">Active</span></td>
-                          <td>
-
-                              <button class="btn btn-mini btn-success"><i class="icon-ok"></i> </button>
-                              <button class="btn btn-mini btn-warning"><i class="icon-pencil"></i> </button>
-                              <button class="btn btn-mini btn-danger"><i class="icon-remove"></i> </button>
-                          
-                          </td>
+                          <td><% user.id %></td>
+                          <td><% user.username %></td>
+                          <td><% user.first_name %> <% user.last_name %></td>
+                          <td><% user.city %></td>
+                          <td><% user.created_at %></td>
                         </tr>
-
+                      <% end %>
 
                       </tbody>
                     </table>
