--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,7 +10,7 @@
 	    <!-- Page heading -->
 	    <div class="page-head">
         <!-- Page heading -->
-	      <h2 class="pull-left">Widgets
+	      <h2 class="pull-left"><%= "Environment: #{RAILS_ENV}" %>
           <!-- page meta -->
           <span class="page-meta">Something Goes Here</span>
         </h2>
